--- a/CZN/Pages/AdminWindow.xaml
+++ b/CZN/Pages/AdminWindow.xaml
@@ -1,28 +1,49 @@
 ﻿<Window x:Class="CZN.Pages.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CZN.Pages"
-        mc:Ignorable="d"
-        Title="Администраторская панель ЦЗН" Height="700" Width="1400">
-    <Grid>
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        xmlns:local="clr-namespace:CZN"
+        Title="Панель администратора" 
+        Height="700" 
+        Width="1100"
+        WindowStartupLocation="CenterScreen">
+    
+    <Window.Resources>
+        <local:BoolToLockedTextConverter x:Key="BoolToLockedTextConverter"/>
+        <Style x:Key="BlockedAdminRowStyle" TargetType="{x:Type DataGridRow}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsLocked}" Value="True">
+                    <Setter Property="Background" Value="#FFFFE0E0"/>
+                    <Setter Property="Foreground" Value="#CC0000"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5">
-            <TextBox x:Name="txtSearch" Width="200" Margin="5" 
-                     TextChanged="txtSearch_TextChanged"/>
-            <Button Content="Добавить" Margin="5" Click="btnAdd_Click"/>
-            <Button Content="Обновить" Margin="5" Click="btnRefresh_Click"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,10">
+            <TextBox x:Name="txtSearch" Width="250" Margin="5" 
+                     TextChanged="txtSearch_TextChanged" 
+                     Tag="Поиск сотрудников..."/>
+            <Button Content="Добавить" Margin="5" Width="100" Click="btnAdd_Click"/>
+            <Button Content="Обновить" Margin="5" Width="100" Click="btnRefresh_Click"/>
+            <Button Content="Выход" Margin="5" Width="80" Click="btnLogout_Click"
+            HorizontalAlignment="Right" Background="#FFDDDDDD" Foreground="#FF333333"/>
+            <TextBlock Text="Текущий режим: Администратор" Margin="10,5" FontWeight="Bold"/>
         </StackPanel>
 
-        <DataGrid x:Name="dgEmployees" Grid.Row="1" Margin="5" AutoGenerateColumns="False"
-                  CanUserAddRows="False" IsReadOnly="True" SelectionMode="Single">
+        <DataGrid x:Name="dgEmployees" Grid.Row="1" 
+                  RowStyle="{StaticResource BlockedAdminRowStyle}"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False" 
+                  IsReadOnly="True" 
+                  SelectionMode="Single">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ФИО" Width="210">
+                <DataGridTextColumn Header="ФИО" Width="190">
                     <DataGridTextColumn.Binding>
                         <MultiBinding StringFormat="{}{0} {1} {2}">
                             <Binding Path="LastName"/>
@@ -31,30 +52,46 @@
                         </MultiBinding>
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Отдел" Width="180" Binding="{Binding Department}"/>
-                <DataGridTextColumn Header="Должность" Width="200" Binding="{Binding Position}"/>
-                <DataGridTextColumn Header="Внутр. телефон" Width="100" Binding="{Binding InternalPhone}"/>
+
+                <DataGridTextColumn Header="Отдел" Width="170" Binding="{Binding Department}"/>
+                <DataGridTextColumn Header="Адрес отдела" Width="150" Binding="{Binding DepartmentAddress}"/>
+                <DataGridTextColumn Header="Район" Width="120" Binding="{Binding DistrictName}"/>
+                <DataGridTextColumn Header="Должность" Width="190" Binding="{Binding Position}"/>
+
+                <DataGridTextColumn Header="Внутр. тел." Width="40" Binding="{Binding InternalPhone}"/>
                 <DataGridTextColumn Header="Городской" Width="70" Binding="{Binding CityPhone}"/>
                 <DataGridTextColumn Header="Мобильный" Width="120" Binding="{Binding MobilePhone}"/>
                 <DataGridTextColumn Header="Email" Width="120" Binding="{Binding Email}"/>
-                <DataGridTextColumn Header="Примечание" Width="200" Binding="{Binding Notes}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="MaxWidth" Value="200"/>
-                            <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridCheckBoxColumn Header="Админ" Width="50" Binding="{Binding IsAdmin}"/>
-                <DataGridTextColumn Header="Адрес отдела" Width="200" Binding="{Binding DepartmentAddress}"/>
-                <DataGridTextColumn Header="Район" Width="150" Binding="{Binding DistrictName}"/>
-                <DataGridTemplateColumn Width="70">
+                <DataGridTextColumn Header="Примечание" Width="280" Binding="{Binding Notes}"/>
+
+                <DataGridCheckBoxColumn Header="Админ" Width="40" Binding="{Binding IsAdmin}"/>
+                <DataGridTemplateColumn Header="Блокировка" Width="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox IsChecked="{Binding IsLocked, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      Content="{Binding IsLocked, Converter={StaticResource BoolToLockedTextConverter}}"
+                      IsEnabled="{Binding CanBeLocked}"
+                      Click="LockCheckBox_Click"
+                      HorizontalAlignment="Center"
+                      Margin="5"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn Width="111">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button Content="Ред." Margin="2" Click="Edit_Click"/>
-                                <Button Content="Удал." Margin="2" Click="Delete_Click"/>
+                                <Button Content="Ред." 
+                                        Margin="2" 
+                                        Width="50"
+                                        Click="Edit_Click"
+                                        ToolTip="Редактировать сотрудника"/>
+                                <Button Content="Удал." 
+                                        Margin="2" 
+                                        Width="50"
+                                        Click="Delete_Click"
+                                        ToolTip="Удалить сотрудника"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
